// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Examples renders Button.Split.Example.tsx correctly 1`] = `
<div
  className=
      ms-BasicButtonsTwoUp
      {
        display: flex;
      }
      & > * {
        flex-grow: 1;
      }
      & .ms-Label {
        margin-bottom: 10px;
      }
>
  <div>
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #333333;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
    >
      Standard
    </label>
    <div
      aria-expanded={false}
      aria-haspopup={true}
      aria-roledescription="split button"
      className=

          {
            display: inline-flex;
            outline: transparent;
            position: relative;
          }
          @media screen and (-ms-high-contrast: active){& {
            border: none;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #666666;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            right: -2px;
            top: -2px;
          }
          & .ms-Button--default, & .ms-Button--primary {
            border-right: none;
          }
          &:focus {
            outline: none!important;
          }
      data-automation-id="test"
      data-is-focusable={true}
      onClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-roledescription="split button"
          className=
              ms-Button
              ms-Button--default
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #f4f4f4;
                border-radius: 0px;
                border: 1px solid transparent;
                box-sizing: border-box;
                color: #333333;
                cursor: pointer;
                display: inline-block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                min-width: 80px;
                outline: transparent;
                padding-bottom: 0;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 0;
                position: relative;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 0px;
                content: "";
                left: 0px;
                outline: 1px solid #666666;
                position: absolute;
                right: 0px;
                top: 0px;
                z-index: 1;
              }
              @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                border: none;
                bottom: -2px;
                left: -2px;
                outline-color: ButtonText;
                right: -2px;
                top: -2px;
              }
              &:active > * {
                left: 0px;
                position: relative;
                top: 0px;
              }
              &:hover {
                background-color: #eaeaea;
                color: #212121;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                border-color: Highlight;
                color: Highlight;
              }
              &:active {
                background-color: #c8c8c8;
                color: #212121;
              }
          data-automation-id="test"
          data-is-focusable={false}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <div
              className=
                  ms-Button-textContainer
                  {
                    flex-grow: 1;
                  }
            >
              <div
                className=
                    ms-Button-label
                    {
                      font-weight: 600;
                      line-height: 100%;
                      margin-bottom: 0;
                      margin-left: 4px;
                      margin-right: 4px;
                      margin-top: 0;
                    }
                id="id__0"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="See 2 sample options"
          className=
              ms-Button
              {
                background-color: #f4f4f4;
                border-radius: 0px;
                border: 0px;
                box-sizing: border-box;
                color: #ffffff;
                cursor: pointer;
                display: inline-block;
                height: auto;
                margin-bottom: 0px;
                margin-left: -1px;
                margin-right: 0px;
                margin-top: 0px;
                outline: transparent;
                padding-bottom: 6px;
                padding-left: 6px;
                padding-right: 6px;
                padding-top: 6px;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
                width: 32px;
              }
              &:hover {
                background-color: #eaeaea;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                color: Highlight;
              }
              @media screen and (-ms-high-contrast: active){& {
                border-left: none;
                border: 1px solid white;
              }
          data-is-focusable={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <i
              aria-hidden={true}
              className=
                  ms-Button-icon
                  ms-Button-menuIcon
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #333333;
                    display: inline-block;
                    flex-shrink: 0;
                    font-family: "FabricMDL2Icons";
                    font-size: 12px;
                    font-style: normal;
                    font-weight: normal;
                    height: 16px;
                    line-height: 16px;
                    margin-bottom: 0;
                    margin-left: 4px;
                    margin-right: 4px;
                    margin-top: 0;
                    speak: none;
                    text-align: center;
                    vertical-align: middle;
                  }
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          aria-hidden={true}
          className=

              {
                background-color: #c8c8c8;
                bottom: 8px;
                position: absolute;
                right: 31px;
                top: 8px;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: WindowText;
              }
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #333333;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
    >
      Primary
    </label>
    <div
      aria-expanded={false}
      aria-haspopup={true}
      aria-roledescription="split button"
      className=

          {
            display: inline-flex;
            outline: transparent;
            position: relative;
          }
          @media screen and (-ms-high-contrast: active){& {
            border: none;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #666666;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            right: -2px;
            top: -2px;
          }
          & .ms-Button--default, & .ms-Button--primary {
            border-right: none;
          }
          &:focus {
            outline: none!important;
          }
      data-automation-id="test"
      data-is-focusable={true}
      onClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-roledescription="split button"
          className=
              ms-Button
              ms-Button--primary
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #0078d4;
                border-radius: 0px;
                border: 1px solid transparent;
                box-sizing: border-box;
                color: #ffffff;
                cursor: pointer;
                display: inline-block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                min-width: 80px;
                outline: transparent;
                padding-bottom: 0;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 0;
                position: relative;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 0px;
                content: "";
                left: 0px;
                outline: 1px solid #666666;
                position: absolute;
                right: 0px;
                top: 0px;
                z-index: 1;
              }
              @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                border: none;
                bottom: -2px;
                left: -2px;
                outline-color: ButtonText;
                right: -2px;
                top: -2px;
              }
              &:active > * {
                left: 0px;
                position: relative;
                top: 0px;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                background-color: WindowText;
                color: Window;
              }
              &:hover {
                background-color: #106ebe;
                color: #ffffff;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                background-color: Highlight;
                color: Window;
              }
              &:active {
                background-color: #005a9e;
                color: #ffffff;
              }
              @media screen and (-ms-high-contrast: active){&:active {
                -ms-high-contrast-adjust: none;
                background-color: WindowText;
                color: Window;
              }
          data-automation-id="test"
          data-is-focusable={false}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <div
              className=
                  ms-Button-textContainer
                  {
                    flex-grow: 1;
                  }
            >
              <div
                className=
                    ms-Button-label
                    {
                      font-weight: 600;
                      line-height: 100%;
                      margin-bottom: 0;
                      margin-left: 4px;
                      margin-right: 4px;
                      margin-top: 0;
                    }
                id="id__6"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className=
              ms-Button
              {
                background-color: #0078d4;
                border-radius: 0px;
                border: 0px;
                box-sizing: border-box;
                color: #ffffff;
                cursor: pointer;
                display: inline-block;
                height: auto;
                margin-bottom: 0px;
                margin-left: -1px;
                margin-right: 0px;
                margin-top: 0px;
                outline: transparent;
                padding-bottom: 6px;
                padding-left: 6px;
                padding-right: 6px;
                padding-top: 6px;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
                width: 32px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: WindowText;
              }
              &:hover {
                background-color: #005a9e;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                color: Highlight;
              }
          data-is-focusable={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <i
              aria-hidden={true}
              className=
                  ms-Button-icon
                  ms-Button-menuIcon
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #ffffff;
                    display: inline-block;
                    flex-shrink: 0;
                    font-family: "FabricMDL2Icons";
                    font-size: 12px;
                    font-style: normal;
                    font-weight: normal;
                    height: 16px;
                    line-height: 16px;
                    margin-bottom: 0;
                    margin-left: 4px;
                    margin-right: 4px;
                    margin-top: 0;
                    speak: none;
                    text-align: center;
                    vertical-align: middle;
                  }
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          aria-hidden={true}
          className=

              {
                background-color: #ffffff;
                bottom: 8px;
                position: absolute;
                right: 31px;
                top: 8px;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: Window;
              }
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #333333;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
    >
      Primary Action Disabled
    </label>
    <div
      aria-expanded={false}
      aria-haspopup={true}
      aria-roledescription="split button"
      className=

          {
            display: inline-flex;
            outline: transparent;
            position: relative;
          }
          @media screen and (-ms-high-contrast: active){& {
            border: none;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #666666;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            right: -2px;
            top: -2px;
          }
          & .ms-Button--default, & .ms-Button--primary {
            border-right: none;
          }
          &:focus {
            outline: none!important;
          }
      data-automation-id="test"
      data-is-focusable={true}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-disabled={true}
          aria-roledescription="split button"
          className=
              ms-Button
              ms-Button--primary
              is-disabled
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #f4f4f4;
                border-radius: 0px;
                border: 1px solid transparent;
                box-sizing: border-box;
                color: #a6a6a6;
                cursor: default;
                display: inline-block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                min-width: 80px;
                outline: transparent;
                padding-bottom: 0;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 0;
                pointer-events: none;
                position: relative;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 0px;
                content: "";
                left: 0px;
                outline: 1px solid #666666;
                position: absolute;
                right: 0px;
                top: 0px;
                z-index: 1;
              }
              @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                border: none;
                bottom: -2px;
                left: -2px;
                outline-color: ButtonText;
                right: -2px;
                top: -2px;
              }
              &:active > * {
                left: 0px;
                position: relative;
                top: 0px;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                background-color: Window;
                border-color: GrayText;
                bordercolor: grayText;
                color: GrayText;
              }
              &:hover {
                outline: 0px;
              }
              &:focus {
                outline: 0px;
              }
          data-automation-id="test"
          data-is-focusable={false}
          disabled={true}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <div
              className=
                  ms-Button-textContainer
                  {
                    flex-grow: 1;
                  }
            >
              <div
                className=
                    ms-Button-label
                    {
                      font-weight: 600;
                      line-height: 100%;
                      margin-bottom: 0;
                      margin-left: 4px;
                      margin-right: 4px;
                      margin-top: 0;
                    }
                id="id__12"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className=
              ms-Button
              {
                background-color: #0078d4;
                border-radius: 0px;
                border: 0px;
                box-sizing: border-box;
                color: #ffffff;
                cursor: pointer;
                display: inline-block;
                height: auto;
                margin-bottom: 0px;
                margin-left: -1px;
                margin-right: 0px;
                margin-top: 0px;
                outline: transparent;
                padding-bottom: 6px;
                padding-left: 6px;
                padding-right: 6px;
                padding-top: 6px;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
                width: 32px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: WindowText;
              }
              &:hover {
                background-color: #005a9e;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                color: Highlight;
              }
          data-is-focusable={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <i
              aria-hidden={true}
              className=
                  ms-Button-icon
                  ms-Button-menuIcon
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #ffffff;
                    display: inline-block;
                    flex-shrink: 0;
                    font-family: "FabricMDL2Icons";
                    font-size: 12px;
                    font-style: normal;
                    font-weight: normal;
                    height: 16px;
                    line-height: 16px;
                    margin-bottom: 0;
                    margin-left: 4px;
                    margin-right: 4px;
                    margin-top: 0;
                    speak: none;
                    text-align: center;
                    vertical-align: middle;
                  }
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          aria-hidden={true}
          className=

              {
                background-color: #c8c8c8;
                bottom: 8px;
                position: absolute;
                right: 31px;
                top: 8px;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: GrayText;
              }
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #333333;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
    >
      Button Disabled
    </label>
    <div
      aria-disabled={true}
      aria-expanded={false}
      aria-haspopup={true}
      aria-roledescription="split button"
      className=

          {
            border: none;
            display: inline-flex;
            outline: none;
            position: relative;
          }
          @media screen and (-ms-high-contrast: active){& {
            border: none;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #666666;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            right: -2px;
            top: -2px;
          }
          & .ms-Button--default, & .ms-Button--primary {
            border-right: none;
          }
      data-automation-id="test"
      data-is-focusable={true}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-disabled={true}
          aria-roledescription="split button"
          className=
              ms-Button
              ms-Button--primary
              is-disabled
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #f4f4f4;
                border-radius: 0px;
                border: 1px solid transparent;
                box-sizing: border-box;
                color: #a6a6a6;
                cursor: default;
                display: inline-block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                min-width: 80px;
                outline: transparent;
                padding-bottom: 0;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 0;
                pointer-events: none;
                position: relative;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 0px;
                content: "";
                left: 0px;
                outline: 1px solid #666666;
                position: absolute;
                right: 0px;
                top: 0px;
                z-index: 1;
              }
              @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                border: none;
                bottom: -2px;
                left: -2px;
                outline-color: ButtonText;
                right: -2px;
                top: -2px;
              }
              &:active > * {
                left: 0px;
                position: relative;
                top: 0px;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                background-color: Window;
                border-color: GrayText;
                bordercolor: grayText;
                color: GrayText;
              }
              &:hover {
                outline: 0px;
              }
              &:focus {
                outline: 0px;
              }
          data-automation-id="test"
          data-is-focusable={false}
          disabled={false}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <div
              className=
                  ms-Button-textContainer
                  {
                    flex-grow: 1;
                  }
            >
              <div
                className=
                    ms-Button-label
                    {
                      font-weight: 600;
                      line-height: 100%;
                      margin-bottom: 0;
                      margin-left: 4px;
                      margin-right: 4px;
                      margin-top: 0;
                    }
                id="id__18"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-disabled={true}
          aria-expanded={false}
          aria-haspopup={true}
          className=
              ms-Button
              is-disabled
              {
                background-color: #f4f4f4;
                border-radius: 0px;
                border: 0px;
                box-sizing: border-box;
                color: #ffffff;
                cursor: pointer;
                display: inline-block;
                height: auto;
                margin-bottom: 0px;
                margin-left: -1px;
                margin-right: 0px;
                margin-top: 0px;
                outline: transparent;
                padding-bottom: 6px;
                padding-left: 6px;
                padding-right: 6px;
                padding-top: 6px;
                pointer-events: none;
                text-align: center;
                text-decoration: none;
                user-select: none;
                vertical-align: top;
                width: 32px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: Window;
                border: 1px solid GrayText;
                color: GrayText;
              }
              &:hover {
                background-color: #f4f4f4;
                cursor: default;
              }
              @media screen and (-ms-high-contrast: active){&:hover {
                color: Highlight;
              }
          data-is-focusable={false}
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: center;
                }
          >
            <i
              aria-hidden={true}
              className=
                  ms-Button-icon
                  ms-Button-menuIcon
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #a6a6a6;
                    display: inline-block;
                    flex-shrink: 0;
                    font-family: "FabricMDL2Icons";
                    font-size: 12px;
                    font-style: normal;
                    font-weight: normal;
                    height: 16px;
                    line-height: 16px;
                    margin-bottom: 0;
                    margin-left: 4px;
                    margin-right: 4px;
                    margin-top: 0;
                    speak: none;
                    text-align: center;
                    vertical-align: middle;
                  }
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          aria-hidden={true}
          className=

              {
                background-color: #c8c8c8;
                bottom: 8px;
                position: absolute;
                right: 31px;
                top: 8px;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active){& {
                background-color: GrayText;
              }
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Component Examples renders Button.Split.Example.tsx correctly 2`] = `
<div>
  <label
    className=
        ms-Label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #333333;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
  >
    Split button with icon and custom styles
  </label>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    aria-roledescription="split button"
    className=

        {
          display: inline-flex;
          outline: transparent;
          position: relative;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #666666;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
          border: none;
          bottom: -2px;
          left: -2px;
          right: -2px;
          top: -2px;
        }
        & .ms-Button--default, & .ms-Button--primary {
          border-right: none;
        }
        @media screen and (-ms-high-contrast: active){& {
          border: none;
        }
        &:focus {
          outline: none!important;
        }
    data-automation-id="test"
    data-is-focusable={true}
    onClick={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        aria-roledescription="split button"
        className=
            ms-Button
            ms-Button--icon
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              border-radius: 0px;
              border: none;
              box-sizing: border-box;
              color: #333333;
              cursor: pointer;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 32px;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              vertical-align: top;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 0px;
              content: "";
              left: 0px;
              outline: 1px solid #666666;
              position: absolute;
              right: 0px;
              top: 0px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
              border: none;
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > * {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              color: #212121;
            }
            @media screen and (-ms-high-contrast: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              color: #0078d4;
            }
        data-automation-id="test"
        data-is-focusable={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <div
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
        >
          <i
            aria-hidden={true}
            className=
                ms-Button-icon
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  flex-shrink: 0;
                  font-family: "FabricMDL2Icons";
                  font-size: 16px;
                  font-style: normal;
                  font-weight: normal;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  speak: none;
                  text-align: center;
                  vertical-align: middle;
                }
            data-icon-name="Upload"
            role="presentation"
          >
            
          </i>
          <div
            className=
                ms-Button-textContainer
                {
                  flex-grow: 1;
                }
          />
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className=
            ms-Button
            {
              background-color: white;
              border-radius: 0px;
              border: 0px;
              box-sizing: border-box;
              cursor: pointer;
              display: inline-block;
              height: auto;
              margin-bottom: 0px;
              margin-left: -1px;
              margin-right: 0px;
              margin-top: 0px;
              outline: transparent;
              padding-bottom: 6px;
              padding-left: 6px;
              padding-right: 6px;
              padding-top: 6px;
              text-align: center;
              text-decoration: none;
              user-select: none;
              vertical-align: top;
              width: 10px;
            }
        data-is-focusable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <div
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
        >
          <i
            aria-hidden={true}
            className=
                ms-Button-icon
                ms-Button-menuIcon
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  flex-shrink: 0;
                  font-family: "FabricMDL2Icons";
                  font-size: 12px;
                  font-style: normal;
                  font-weight: normal;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  speak: none;
                  text-align: center;
                  vertical-align: middle;
                }
            data-icon-name="ChevronDown"
            role="presentation"
          >
            
          </i>
        </div>
      </button>
      <span
        aria-hidden={true}
        className=

            {
              border-left: 1px solid #c8c8c8;
              bottom: 8px;
              position: absolute;
              right: 17px;
              top: 8px;
              width: 1px;
            }
      />
    </span>
  </div>
</div>
`;
